@@ -1542,6 +1542,9 @@ void req_jobobit(
 
   pjob->ji_qs.ji_un.ji_exect.ji_exitstat = exitstatus;
 
+  pjob->ji_wattr[(int)JOB_ATR_exitstat].at_val.at_long = exitstatus;
+  pjob->ji_wattr[(int)JOB_ATR_exitstat].at_flags |=ATR_VFLAG_SET;
+
   patlist = (svrattrl *)GET_NEXT(preq->rq_ind.rq_jobobit.rq_attr);
 
   sprintf(acctbuf,msg_job_end_stat, 
